# SharpTNI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLEMON.cmake
data/: README.md
data/ebola/: ebola_2014_maffta.fasta  scotti_ebola.xml  scotti_ebola_host_labels.csv  scotti_ebola_tip_dates.csv  scotti_hostTimes.csv
data/sample/: sample_host.out  sample_ptree.out
data/simulation/: README.md  runSharpTNIsimulation.sh
data/simulation/m10_kappa1/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m10_kappa2/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m10_kappa3/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m20_kappa1/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m20_kappa2/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m20_kappa3/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m30_kappa1/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m30_kappa2/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m30_kappa3/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m50_kappa1/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m50_kappa2/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m50_kappa3/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m5_kappa1/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m5_kappa2/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
data/simulation/m5_kappa3/: fulltree1.out  fulltree2.out  fulltree3.out  fulltree4.out  fulltree5.out  host1.out  host2.out  host3.out  host4.out  host5.out  phytree1.nwk  phytree2.nwk  phytree3.nwk  phytree4.nwk  phytree5.nwk  ptree1.out  ptree2.out  ptree3.out  ptree4.out  ptree5.out
script/: 3sat2tni.py  README.md  runSharpTNI.sh  unsat_tree.txt
script/complexity/: Hamming.py  README.md  sat_tree.txt  unsat_leaflabels.txt  viz.py
src/: CMakeCache.txt  CMakeLists.txt  basetree.cpp  basetree.h  dimacs.cpp  dimacs.h  dimacsmain.cpp  samplesankoffmain.cpp  sankoff.cpp  sankoff.h  sankoffmain.cpp  utils.h
